--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "sanity:typegen": "sanity schema extract --path=./src/sanity/extract.json && sanity typegen genearate",
+    "sanity:typegen": "sanity schema extract --path=./src/sanity/extract.json && sanity typegen generate",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate"
   },
@@ -29,7 +29,8 @@
     "react-icons": "^5.5.0",
     "sanity": "^4.22.0",
     "styled-components": "^6.3.8",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
