--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "@neondatabase/serverless": "^1.0.2",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
+    "@stripe/stripe-js": "^8.7.0",
     "@t3-oss/env-nextjs": "^0.13.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.563.0",
-    "next": "16.1.6",
+    "next": "^16.1.6",
     "next-sanity": "^11.6.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
     "sanity": "^4.22.0",
+    "stripe": "^20.3.0",
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
